--- a/conf/client.conf.example
+++ b/conf/client.conf.example
@@ -1,8 +1,9 @@
 [waiverdb]
 # Specify OIDC or Kerberos for authentication
 auth_method=OIDC
-api_url=https://waiverdb-web-waiverdb.app.os.stg.fedoraproject.org/api/v1.0
-oidc_id_provider=https://id.stg.fedoraproject.org/openidc/
+api_url=https://waiverdb-web-waiverdb.app.os.fedoraproject.org/api/v1.0
+resultsdb_api_url=https://taskotron.fedoraproject.org/resultsdb_api/api/v2.0
+oidc_id_provider=https://id.fedoraproject.org/openidc/
 oidc_client_id=waiverdb-authorizer
 oidc_client_secret=notsecret
 oidc_scopes=
