Also, disable building docs until it works.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,10 @@
 [tox]
-envlist = lint,py36,docs
+envlist = lint,py36
+
+# Cannot build tox here until this is merged and released
+# https://github.com/ignatenkobrain/sphinxcontrib-issuetracker/pull/13
+# envlist = lint,py36,docs
+
 # If the user is missing an interpreter, don't fail
 skip_missing_interpreters = True
 
@@ -16,6 +21,7 @@ commands =
 changedir = docs
 deps =
     -rrequirements.txt
+    sphinxcontrib-issuetracker
 whitelist_externals =
     mkdir
     rm
