Run flake8 with tox.
We currently run it in our Jenkins pipeline.  We should run it here too.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint,py36
+envlist = flake8,lint,py36
 
 # Cannot build tox here until this is merged and released
 # https://github.com/ignatenkobrain/sphinxcontrib-issuetracker/pull/13
