Stop publishing to the messages bus
Testing environments don't have a message bus available yet.

Update the OpenShift test template to disable publishing to the
message bus.

Signed-off-by: Hunor Csomortáni <csomh@redhat.com>

--- a/openshift/waiverdb-test-template.yaml
+++ b/openshift/waiverdb-test-template.yaml
@@ -64,6 +64,7 @@ objects:
       AUTH_METHOD = 'dummy'
       OIDC_CLIENT_SECRETS = '/etc/secret/client_secrets.json'
       RESULTSDB_API_URL = 'https://resultsdb-api.engineering.redhat.com/api/v2.0'
+      MESSAGE_BUS_PUBLISH = False
 - apiVersion: v1
   kind: Service
   metadata:
