CI/CD - Updating Pagure PR status and sending an email after build completes

--- a/openshift/pipelines/templates/waiverdb-dev-template.yaml
+++ b/openshift/pipelines/templates/waiverdb-dev-template.yaml
@@ -86,7 +86,7 @@ parameters:
 - name: WAIVERDB_INTEGRATION_TEST_BUILD_CONFIG_NAME
   displayName: Name of BuildConfig for running integration tests
   required: true
-  value: waiverdb-integration-test
+  value: waiverdb-dev-integration-test
 - name: WAIVERDB_INTEGRATION_TEST_BUILD_CONFIG_NAMESPACE
   displayName: Namespace of BuildConfig for running integration tests
   required: false
@@ -162,7 +162,7 @@ objects:
     labels:
       app: "${NAME}"
   spec:
-    runPolicy: "Serial" # FIXME: Parallel is supported, but we have limited quota in UpShift.
+    runPolicy: "Serial"
     completionDeadlineSeconds: 1800
     source:
       git:
