CI/CD: Disable doc push temporarily
Let's temporarily disable the doc push until <https://pagure.io/pagure/issue/3919> is fixed.

--- a/openshift/pipelines/jobs/waiverdb-dev.env
+++ b/openshift/pipelines/jobs/waiverdb-dev.env
@@ -1,1 +1,2 @@
 NAME=waiverdb-dev
+PAGURE_DOC_REPO_NAME= # Temporarily disable doc push to workaround https://pagure.io/pagure/issue/3919. Remove this line when it is fixed.
