CI/CD: Cleanup unused test environments
Fix https://pagure.io/waiverdb/issue/248

This PR will cleanup all test environments that were created 1 hour ago
before creating a new test environment.

The following Java methods must be approved to allow the pipeline script
to access the Java DateTime API. For more information about Jenkins
In-process Script Approval, see
<https://jenkins.io/doc/book/managing/script-approval/>.

```
method java.text.DateFormat parse java.lang.String
method java.text.DateFormat setTimeZone java.util.TimeZone
method java.util.Date getTime
```

--- a/openshift/waiverdb-test-template.yaml
+++ b/openshift/waiverdb-test-template.yaml
@@ -13,6 +13,8 @@ apiVersion: v1
 kind: Template
 metadata:
   name: waiverdb-test-template
+labels:
+  template: waiverdb-test
 parameters:
 - name: TEST_ID
   displayName: Test id
